# smartshop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ping.yml
shopapi/: urls.py  views.py
smartshop/: asgi.py  settings.py  urls.py  wsgi.py
