[project]
name = "smart-shopper-p1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "beautifulsoup4>=4.13.5",
    "django>=5.2.6",
    "django-redis>=6.0.0",
    "fastapi>=0.116.1",
    "lxml>=6.0.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
